# poetry-docker-build-and-run

./: .gitignore  Dockerfile  Dockerfile.local  LICENSE  Makefile  README.md  cloudbuild-main.yaml  cloudbuild-pr.yaml  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
terraform/: cloudbuild.tf  main.tf
tests/: test_main.py  test_poetry_docker_build_and_run.py
