[tool.poetry]
name = "poetry-docker-build-and-run"
version = "0.1.0"
description = ""
authors = ["masaki925 <masaki925@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pysen = "^0.10.2"
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 110
py_version = "py39"

[[tool.pysen.lint.mypy_targets]]
  paths = ["src", "tests"]
